# webfractal

./: .gitignore  CMakeLists.txt  Fractal.hpp  Palette.hpp  Params.cpp  Params.hpp  main.cpp
src/: CMakeLists.txt  Complex.hpp  FileOps.cpp  FileOps.hpp  Generator.cpp  Generator.hpp  Palette.cpp  Palette.hpp  Params.cpp  Params.hpp  ParsePalette.cpp  PngFile.cpp  main.cpp
src/fractals/: CMakeLists.txt  Fractal.hpp  Mandelbrot.cpp  Mandelbrot.hpp
